Внесены правки по замечаниям