@@ -13,13 +13,16 @@ import ru.practicum.shareit.item.comment.CommentMapper;
 import ru.practicum.shareit.item.comment.CommentRepository;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.user.UserMapper;
 import ru.practicum.shareit.user.UserRepository;
 import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.utility.Utility;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -33,12 +36,11 @@ public class ItemService {
     private final Utility utility;
 
     public ItemDto create(ItemDto itemDto, Long userId) {
-        itemDto.setOwner(userRepository.findById(userId).orElseThrow(()
-                -> new EntityNotFoundException("Пользователь c " + userId + " не обнаружен")));
+        itemDto.setOwner(UserMapper.toUserDto(userRepository.findById(userId).orElseThrow(()
+                -> new EntityNotFoundException("Пользователь c " + userId + " не обнаружен"))));
         Item item = ItemMapper.toItem(itemDto);
         itemRepository.save(item);
         return ItemMapper.toItemDto(item);
-        //Могу ли я вернуть просто itemDto приходящий в метод, что бы не выполнять лишние операции?
     }
 
     public ItemDto update(ItemDto itemDto, Long userId) {
@@ -47,39 +49,23 @@ public class ItemService {
         Optional.ofNullable(itemDto.getName()).ifPresent(item::setName);
         Optional.ofNullable(itemDto.getDescription()).ifPresent(item::setDescription);
         Optional.ofNullable(itemDto.getAvailable()).ifPresent(item::setAvailable);
-        Optional.ofNullable(itemDto.getOwner()).ifPresent(item::setOwner);
+        Optional.ofNullable(itemDto.getOwner()).map(UserMapper::toUser).ifPresent(item::setOwner);
         Optional.ofNullable(itemDto.getRequest()).ifPresent(item::setRequest);
         itemRepository.save(item);
         log.info("Предмет с Id ={} обновлён", item.getId());
         return ItemMapper.toItemDto(item);
     }
 
-    public ItemDto get(Long id) {
+    public ItemDto get(Long id, Long userId) {
         Item item = itemRepository.findById(id).orElseThrow(()
                 -> new EntityNotFoundException("Предмет с Id = " + id + " не обнаружен"));
-/*      Booking lastBooking = bookingRepository.getMaxBooking();
+        final Long itemId = item.getId();
+        Booking lastBooking = bookingRepository.getLastBooking(itemId);
+        Booking nextBooking = bookingRepository.getNextBooking(itemId);
+        List<Comment> comments = commentRepository.getComments(itemId);
         ItemDto itemDto = ItemMapper.toItemDto(item);
-        itemDto.setLastBooking(lastBooking);
-        return itemDto;
-
-        Здесь очень странная история по тестам в Postman. С одной стороны они требуют наличие
-        полей lastBooking и nextBooking у DTO модели, но при этом их значение должно быть null
-
-
-        pm.test("Test item 'lastBooking' field", function () {
-        var jsonData = pm.response.json();
-        pm.expect(jsonData).to.have.property('lastBooking');
-        pm.expect(jsonData.lastBooking, '"lastBooking" must be "null"').null;
-    });
-        pm.test("Test item 'nextBooking' field", function () {
-        var jsonData = pm.response.json();
-        pm.expect(jsonData).to.have.property('nextBooking');
-        pm.expect(jsonData.nextBooking, '"nextBooking" must be "null"').null;
-    });
-        Я так понимаю, эти поля нужны для следующего ТЗ?
- */
-        ItemDto itemDto = ItemMapper.toItemDto(item);
-        itemDto.setComments(commentRepository.getComments(item.getId()));
+        utility.selectUserForDTOModel(nextBooking,lastBooking,itemDto,userId);
+        itemDto.setComments(comments);
         return itemDto;
     }
 
@@ -90,7 +76,20 @@ public class ItemService {
 
     public List<ItemDto> getAllFromUser(Long id) {
         List<Item> items = itemRepository.getAllFromUser(id);
-        return items.stream().map(ItemMapper::toItemDto).collect(Collectors.toList());
+        List<Long> itemsIds = items.stream().map(Item::getId).toList();
+        Map<Long,Booking> lastBookings = bookingRepository.getAllLastBookings(itemsIds).stream()
+                .collect(Collectors.toMap(booking -> booking.getItem().getId(), Function.identity(),(b1,b2) -> b1));
+        //я очень долго пытался получить мапу из bookingRepository но оказывается JPA не имеет такого типа возвращаемого значения
+        //читать такой код откровенно не просто, а писать мне как новчику пока сложно...может есть ещё какие-то варианты преобразования List в Map избегая циклов?
+        //или имелось в виду то, что циклов я должен избегать только при обращении к репозиторию что бы не нагружать БД?
+        Map<Long,Booking> nextBookings = bookingRepository.getAllNextBookings(itemsIds).stream()
+                .collect(Collectors.toMap(booking -> booking.getItem().getId(),Function.identity(),(b1,b2) -> b1));
+        Map<Long, List<Comment>> comments = commentRepository.getAllComments(itemsIds).stream().collect(Collectors.groupingBy(comment -> comment.getItem().getId()));
+        return items.stream().map(item -> {
+                    ItemDto itemDto = ItemMapper.toItemDto(item);
+                    utility.setBookingsForItemDto(itemDto, lastBookings, nextBookings, comments);
+                    return itemDto;
+                }).collect(Collectors.toList());
     }
 
     public CommentDto addComment(Long userId, Long id, CommentDto commentDto) {
@@ -99,7 +98,7 @@ public class ItemService {
         User user = userRepository.findById(userId).orElseThrow(()
                 -> new EntityNotFoundException("Пользователь c " + userId + " не обнаружен"));
         Booking booking = bookingRepository.getBookingFromUserAndItem(userId,id).orElseThrow(()
-                -> new ValidationException("Бронирование пользователя с Id = " + userId + " не обнаружено"));
+                -> new ValidationException("Бронирование пользователя с Id = " + userId + " не обнаружено"));;
         utility.checkBooking(booking,user);
         commentDto.setItem(item);
         commentDto.setUser(user);
